# oat-ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
