[package]
name = "oats-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oats_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.11", path = "vendor/whisper-rs" } # Local patched version for Windows MSVC support
cpal = "0.15"       # For audio recording
hound = "3.5"       # For audio utilities
tokio = { version = "1", features = ["full"] } # For async backend ops
log = "0.4"
env_logger = "0.10"
anyhow = "1.0.102"
once_cell = "1.21.4"

